# oz_class

./: .gitignore  README.md
basic/class/crawling/: melon.py  naver_1.py  naver_2.py  naver_3.py  naver_4.py  naver_5.py  naver_6.py  selenium_1.py  selenium_2.py  selenium_3.py  selenium_4.py
basic/class/django/: README.md
basic/class/django/django-day1/: pyproject.toml
basic/class/django/django-day1/config/: settings.py  urls.py
basic/class/django/django-day1/feeds/: urls.py
basic/class/django/django-day2/: pyproject.toml
basic/class/django/django-day2/boards/: admin.py  models.py
basic/class/django/django-day2/boards/migrations/: 0001_initial.py  0002_board_created_at_board_updated_at.py
basic/class/django/django-day2/config/: settings.py
basic/class/django/django-day2/users/: admin.py  models.py
basic/class/django/django-day2/users/migrations/: 0001_initial.py  0002_user_is_buisness.py  0003_rename_is_buisness_user_is_business_user_grade.py
basic/class/flask/: README.md
basic/class/html_css/: 06-텍스트표시하기.html
basic/class/python/: class.ipynb  def.ipynb  exception.ipynb  for.ipynb  if.ipynb  while.ipynb
basic/lms_challenge/flask/: .gitignore
project/adminpage/: README.md  dataHandler.js  index.html
project/naver_news/: README.md
project/naver_news/python/: main.py
project/oz_shop/: README.md  app.py  models.py  schemas.py
python_basic/python_challenge/: Chapter01_기초과제_윤준명.ipynb  Chapter05_기초과제_윤준명.ipynb  Chapter09~13_기초과제_윤준명.ipynb  HangmanProject.py  chapter17~20_기초과제_윤준명.ipynb
python_challenge/: Chapter05_기초과제_윤준명.ipynb
(+119 files in other folders)
