[tool.poetry]
name = "django-day1"
version = "0.1.0"
description = "python django project study day1"
authors = ["newbission <newbission@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
